# reverb2odoo

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  cli.py  compute_price_brackets.py  create_odoo_schema.py  create_odoo_views.py  dedup_model.py  ebay_categories.py  ebay_scraper.py  env-template.yml  field-audit.md  gear_page.py  gpt_model.py  gpt_upload.py  migrate_family_ids.py  migrate_guitar_to_gear_listing.py  migrate_weighted_tags.py  models.py  odoo_connector.py  pyproject.toml  remove_studio_sequence.py  reverb_scraper.py  set_default_currency.py  sync_categories.py  sync_model.py  trigger_listing_compute.py  trigger_weighted_score.py  validate_and_sync.sh  validate_migration.py  validate_model.py
.claude/: ralph-prd.json  settings.local.json
docs/: migration-guitar-to-gear-listing.md
gear-page/: butterfly.html  edith.html  icet.html  little-dog.html  twin-p.html
gpt-files/: models_body_size.md  models_body_size_gibson.md  models_gibson.md  models_others.md
knowledge_base/: guitar_brands_kb_full_v2 (1).md  guitar_collection (1).md  models_gibson.md  models_others.md  tags.md
odoo_mcp/: brand_cache.py  cache.py  config.py  prompts.py  server.py
reports/: sync-failure-2026-02-13.txt  validate-failure-2026-02-13.txt
templates/: gear-card.html.j2
tests/: conftest.py  test_brand_cache.py  test_brands_resource.py  test_cache.py  test_collection_resource.py  test_compute_price_brackets.py  test_create_odoo_schema.py  test_create_odoo_views.py  test_dedup_model.py  test_ebay_scraper.py  test_get_brand_tool.py  (+27 more)
(+94 files in other folders)
